# speakng

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/speakng/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/espeak-ng-data/: README.md
app/src/main/cpp/: CMakeLists.txt  audio_player.cpp  audio_player.h  espeak_bridge.cpp  espeak_bridge_stub.cpp
app/src/main/cpp/include/espeak-ng/: README.md
app/src/main/java/com/example/speakng/: MainActivity.kt  MainViewModel.kt  WaveformView.kt
app/src/main/java/com/example/speakng/engine/: EspeakBridge.kt  SpeakEngine.kt
app/src/main/jniLibs/: README.md
app/src/main/res/drawable/: spinner_bg.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/speakng/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
